1.60
-----------------
Fixed the wrong dependence in verify.


-------------------------------------------


1.59
-----------------
GR v15r24
Look up run start&stop times from ACQSUMMARY rather than relying on the
metadata supplied with the delivery. (LONE-76)
Make our own magic7 file for use with ft2Runs. (LONE-82)
Move deliveries to NFS when we're done with them.
Use different directory in buffers when in test mode.
The verify section is executed after mergeDigi.
Use prune tree merger for svac.
-------------------------------------------


1.58
-----------------
GR v15r21
Fix bug that caused LCI runs to not get finalized.
Use the same tree merger as recon, digi, & gcr for cal tuples.
-------------------------------------------


1.57
-----------------
GR v15r19 (appropriate jobOptions were added for digi).
New monitoring tags (bug fix in FastMon geomagnetic variables).
Attach MOOT key and alias as metadata when registering files.
Avoid the merging issue described in JIRA LONE-67.
Make run locking a little more verbose.
-------------------------------------------


1.56
-----------------
GR v15r13
Lots of new monitoring tags.
Use different aspLauncher for dev.
Use symbolic links to point to buffers.
Use flight geometry always.
Export to GSSC on prod.
-------------------------------------------


1.55
-----------------
GR v15r6p1.
ST v9r5p5.
Lots of new monitoring tags.
Don't clean up crumbs or chunks if a merge has missing input files.
Fix several bugs in incomplete run handling.
-------------------------------------------


1.54
-----------------
GlastRelease GR v15r5 and Root v5.18.00c-gl1 (new DFI with the filter bits).
Using the ISOC_NIGHLY flightops configuration (to get the new DFI).
New tags of monitoring packages (to include the filter bits informations).
PipelineStaging6 buffer disk temporarily removed from confing.
Be more paranoid about running cleanupCrumbs.
Make saved recon core files world-readable and group-writeable.