@@ -47,7 +47,9 @@ fileTypes = {
     'magic7L1': 'txt',
     'merit': 'root',
     'meritHist': 'root',
+    'meritHistAlarm': 'xml',
     'meritTrend': 'root',
+    'meritTrendAlarm': 'xml',
     'recon': 'root',
     'reconHist': 'root',
     'reconHistAlarm': 'xml',
